# Code-jam-2021

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  tox.ini  utils.py
.github/workflows/: lint.ymal
docs/: videos.md
ecs/: __init__.py  _utils.py  _world.py  component.py  world.py
game/: components.py  cutscenes.py  main.py  mapgeneration.py  processors.py  state.py  utils.py  world.py
game/ecs/: __init__.py  component.py  world.py
src/game/: __main__.py
