[tool.poetry]
name = "code_jam_2021"
version = "0.1.0"
description = ""
authors = ["Areking <ridham225sharma@gmail.com>"]
license = "MIT"
packages = [
    { include = "game", from="src" }
]

[tool.poetry.dependencies]
python = "^3.8"
flake8-isort = "^4.0.0"
blessed = "^1.18.1"

[tool.poetry.dev-dependencies]
# Base tools
flake8 = "~3.9"
isort = "~5.9"
pre-commit = "~2.13.0"

# Flake8 plugins, see https://github.com/python-discord/code-jam-template/tree/main#plugin-list
flake8-annotations = "~2.6"
flake8-bandit = "~2.1"
flake8-docstrings = "~1.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
